--- a/Analisando_a_Violência_no_Rio_de_Janeiro.ipynb
+++ b/Analisando_a_Violência_no_Rio_de_Janeiro.ipynb
@@ -61,7 +61,7 @@
       },
       "source": [
         "## 1. Compreensão Problema de Negócio\n",
-        "Usando a mentalidade de *open data* cada vez mais presente nas instituições e empresas aqui no Brasil, utilizaremos os dados o ISP - RJ, os quais baseiam-se na data em que foi confeccionado o Registro de Ocorrência e entrada nos orgãos competentes.\n",
+        "Usando a mentalidade de *open data* cada vez mais presente nas instituições e empresas aqui no Brasil, utilizaremos os dados do ISP - RJ, os quais baseiam-se na data em que foi confeccionado o Registro de Ocorrência e entrada nos orgãos competentes.\n",
         "\n",
         "Sendo assim, com a robustez das bibliotecas **Pandas** e **Numpy** para manipulação de dados, no intuito de obter insigths e extrair informações de nossos dados, iremos explorar esses dados sobre a violência e criminalidade no estado do Rio de Janeiro.\n",
         "\n",
@@ -81,7 +81,7 @@
         "import numpy as np\n",
         "from sklearn.preprocessing import MinMaxScaler"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "dados = \"https://raw.githubusercontent.com/angeloBuso/ViolenciaRJ/main/dataset/DOMensalEstadoDesde1991_etl.csv\"\n",
         "df = pd.read_csv(dados, delimiter=';')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +868,7 @@
       "source": [
         "### 3.1 Visão descritiva do nosso dataSet\n",
         "\n",
-        "Identificando algumas informações sobre os dados visualizamos a dimensionalidade do mesmo. Quremos identificar quantos atributos/variáveis e registros iremos trabalhar. Um passo importante é verificar quais os tipos das nossas variáveis, além de, confirmar a \"informação\" que as variáveis transmitem, ou seja, se condizem com sua representação. "
+        "Identificando algumas informações sobre os dados visualizamos a dimensionalidade do mesmo. Queremos identificar quantos atributos/variáveis e registros iremos trabalhar. Um passo importante é verificar quais os tipos das nossas variáveis, além de, confirmar a \"informação\" que as variáveis transmitem, ou seja, se condizem com sua representação. "
       ]
     },
     {
@@ -891,7 +891,7 @@
         "    print(\"\\nAtributos são do tipo:\")\n",
         "    print(df.dtypes)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -906,7 +906,7 @@
       "source": [
         "visaogeral(df,\"Visão Geral do dataSet\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,7 +1112,7 @@
         "# quantidade de dados faltantes em cada variável:\n",
         "(df.isnull().sum()).sort_values(ascending = False)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1205,7 +1205,7 @@
       "source": [
         "(df.isnull().sum()/df.shape[0]*100).sort_values(ascending = False)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
         "id": "dlwZvpm0cnb5"
       },
       "source": [
-        "Entendemos que os valores *missing*, neste conjunto de dados e neste projeto, se dá pelo fator **período**, ou seja, dependendo do atributo escolhido teremos informações a partir de um determido mes/ano. Neste caso não faremos nenhum tratamento de inputação, uma vez que, os dados foram diponibilizados apenas após as referidas datas."
+        "Entendemos que os valores *missing*, neste conjunto de dados e neste projeto, se dá pelo fator **período**, ou seja, dependendo do atributo escolhido teremos informações a partir de um determido mes/ano. Neste caso não faremos nenhum tratamento de imputação, uma vez que, os dados foram diponibilizados apenas após as referidas datas."
       ]
     },
     {
@@ -1325,7 +1325,7 @@
         "df_6year= df.loc[df.ano >= 2015].set_index(['ano', 'mes'])\n",
         "df_6year.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1799,7 +1799,7 @@
       "source": [
         "df_6year.describe()#.transpose()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2368,7 +2368,7 @@
       },
       "source": [
         "#### 3.4.2 Violação do patrimônio - veículos\n",
-        "A medida que a frota automotiva cresce, esses veículos estão expostos à ação de criminosos. Muitas das vezes, este veículo foi adquirido por financiamento, alguns casos não possuem seguro contra roubo. Logo, compreender como está a situação deste tipo de crime, no estado do Rio de Janeiro, poderia nos informar o tamanho do risco que um cidadão corre ao financiar um veículo e não considerar realizar um seguro contra roubo.\n"
+        "A medida que a frota automotiva cresce, esses veículos estão expostos à ação de criminosos. Muitas das vezes, este veículo foi adquirido por financiamento e em alguns casos não possuem seguro contra roubo. Logo, compreender como está a situação deste tipo de crime, no estado do Rio de Janeiro, poderia nos informar o tamanho do risco que um cidadão incorre ao financiar um veículo e não considerar realizar um seguro contra roubo.\n"
       ]
     },
     {
@@ -2386,7 +2386,7 @@
         "describe().\\\n",
         "transpose()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2486,7 +2486,7 @@
       "source": [
         "print(df_6year.index.min(), df_6year.index.max())"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2503,7 +2503,7 @@
         "id": "vSK-QUPpl5lM"
       },
       "source": [
-        "Entre o périodo de janeiro de 2015 à fevereiro de 2021 a média mensal de roubos e furtos de veículos, no estado do Rio de Janeiro foram de 3.3363 e 1.298 veículos, respectivamente.\n",
+        "Entre o período de janeiro de 2015 à fevereiro de 2021 a média mensal de roubos e furtos de veículos, no estado do Rio de Janeiro, foram de 3.3363 e 1.298 veículos, respectivamente.\n",
         "\n",
         "Entretanto a segurança Pública do estado do Rio de Janeiro, possui uma média mensal, para o mesmo período observado, de 2.321 veículos recuperados. Mitigando o dano causado ao cidadão que teve seu veículo subtraído."
       ]
@@ -2526,7 +2526,7 @@
         "print('Da média total total ({:.0f}) de veículos subtraídos, cerca de\\\n",
         " {:.2f}% são recuperados.'.format(mean_furto_roubo, tx_recup))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2561,7 +2561,7 @@
         "plot_veic['total_veic_subtr']= plot_veic['furto_veiculos'] + \\\n",
         "plot_veic['roubo_veiculo']"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2604,7 +2604,7 @@
         "         transform=ax.transAxes,\n",
         "         fontsize= 12);"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2643,7 +2643,7 @@
       "source": [
         "plot_veic.loc[plot_veic.total_veic_subtr == plot_veic.total_veic_subtr.min()]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2720,7 +2720,7 @@
       "source": [
         "plot_veic.total_veic_subtr.describe()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2768,7 +2768,7 @@
         "corr(method= 'pearson')\n",
         "correlations"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2853,7 +2853,7 @@
         "#celular= celular.groupby('ano')\n",
         "celular.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3008,7 +3008,7 @@
         "         transform=ax.transAxes,\n",
         "         fontsize= 12);"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3031,8 +3031,8 @@
         "id": "PDbzxVW9V5lA"
       },
       "source": [
-        "Dois pontos saltam aos olhos nesse gráfico da evolução dos roubos de celulares no estado do Rio de Janeiro, no período de jan/2015 a fev/2021:\n",
-        "* O ponto mínimo observado, refere-se ao registro do mês de fev/2017. Usando estatísitca descritivas podemos inferir que esse registro pode ter sido um possível erro de entrada de dados, pois foge a distribuição dos dados.\n",
+        "Dois pontos saltam aos olhos nesse gráfico da evolução dos roubos de celulares no estado do Rio de Janeiro, no período de jan/2015 à fev/2021:\n",
+        "* O ponto mínimo observado, refere-se ao registro do mês de fev/2017. Usando estatística descritiva, podemos inferir que esse registro pode ter sido um possível erro de entrada de dados, pois foge a distribuição dos dados.\n",
         "* Houve uma tendência de queda observada no período posterior ao decreto de Pandemia da Covid19 no Brasil."
       ]
     },
@@ -3049,7 +3049,7 @@
       "source": [
         "celular.loc[celular.total_cel_subtr == celular.total_cel_subtr.max()]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3132,7 +3132,7 @@
       "source": [
         "celular.describe()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3266,7 +3266,7 @@
       "source": [
         " celular.loc[2017]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3439,7 +3439,7 @@
         "#### 3.4.4 Violação da vida\n",
         "Não poderíamos deixar de verificar o patrimônio, que no meu ponto de vista, é o mais importante, nossas **vidas**. Sem ela não temos condições de fazer nada nesse mundo terreno.\n",
         "\n",
-        "Os dados do ISP - RJ consolida os crimes contra a vida humana em um grupo denominado \"Crimes Violentos\". Há uma subcategoria, **`letalidade_violenta`** que é o somatórios dos seguintes crimes: Homicídio doloso; Lesão corporal seguida de morte; Latrocínio e Morte por intervenção de agente do Estado.\n",
+        "Os dados do ISP - RJ consolida os crimes contra a vida humana em um grupo denominado \"Crimes Violentos\". Há uma subcategoria, **`letalidade_violenta`** que é o somatório dos seguintes crimes: Homicídio doloso; Lesão corporal seguida de morte; Latrocínio e Morte por intervenção de agente do Estado.\n",
         "\n",
         "Vamos enxergar como estão esses dados!"
       ]
@@ -3467,7 +3467,7 @@
         "vida= vida.groupby('ano')\n",
         "vida.sum()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3513,7 +3513,7 @@
       "source": [
         "df_6year['letalidade_violenta'].groupby('ano').sum().plot();"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3566,7 +3566,7 @@
         "         transform=ax.transAxes,\n",
         "         fontsize= 12);"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3607,7 +3607,7 @@
       "source": [
         "df_6year.loc[df_6year['letalidade_violenta'] == df_6year['letalidade_violenta'].max()]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3837,7 +3837,7 @@
       "source": [
         "df_6year.loc[df_6year['letalidade_violenta'] == df_6year['letalidade_violenta'].min()]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4066,7 +4066,7 @@
       "source": [
         "df_6year['letalidade_violenta'].describe()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4100,7 +4100,7 @@
         "\n",
         "Todo processo de análise em *Data Science* as conclusões são únicas, pois reflete aos dados no contexto do problema de negócio apontado no início do projeto. Este dataSet que utilizamos é bom para praticar manipulação de dados e suas variações. Mudando a perspectiva de como os dados são aprensentados podemos obter bons *insights*.\n",
         "\n",
-        "Das 3 variáveis que observamos, por ser tratar do tema **violência** gostaríamos de ter cenários com tendências mensais de queda. No entanto, quando plotamos os dados históricos observamos que há uma linearidade nos crimes.\n",
+        "Das 3 variáveis que observamos, por ser tratar do tema **violência** gostaríamos de ter cenários com tendências mensais de queda. No entanto, quando plotamos os dados históricos observamos que há uma manutenção nas quantidades nos crimes analisados.\n",
         "\n",
         "Notamos, também que, das 3 varíaveis observadas, todas as máximas foram observadas nos meses de março, independente do ano. Que indica que o mês de março no estado do Rio de Janeiro não seria uma boa idéia *ficar de bobeira*. Podemos ainda afirmar que no período em que foi decretado Pandemia da Covid19 no Brasil, março/2020, notou-se redução desses delitos, uma vez que as vítimas não ficaram expostas às ações de criminosos.\n",
         "\n",
@@ -4153,7 +4153,7 @@
         "dados_orig = \"https://raw.githubusercontent.com/angeloBuso/ViolenciaRJ/main/dataset/DOMensalEstadoDesde1991.csv\"\n",
         "df_orig = pd.read_csv(dados_orig, delimiter=';')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4169,7 +4169,7 @@
       "source": [
         "df_orig.head(10)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4881,7 +4881,7 @@
       "source": [
         "df_orig.info()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4969,7 +4969,7 @@
         "print('Foram atribuidos à {} variáveis o tipo categórico'.format(categ.shape[1]))\n",
         "categ"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5496,7 +5496,7 @@
       "source": [
         ""
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     }
   ]
